Fix: Fix styles on IE11

--- a/src/components/ContentOpenWith/ContentOpenWith.scss
+++ b/src/components/ContentOpenWith/ContentOpenWith.scss
@@ -46,7 +46,6 @@
     align-items: center;
     display: flex;
     height: 100vh;
-    justify-content: center;
     width: 100vw;
 
     .bcow-portal-loading-indicator {
